k8s-manifests/applications/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
  - name: http
    port: 7878
    targetPort: 7878
